# SmartPulse

./: .env  .gitignore  Contribute.md  DockerFile  EDA.ipynb  LICENSE  README.md  eda.py  main.py  mobile.csv  mobile_cleaned.csv  mobile_eda.csv  mobile_price_predictor.pkl  pyproject.toml  requirements.txt  scraper.py
templates/: index.html
