[project]
name = "smartpulse"
version = "0.1.0"
description = " Intelligent Mobile Phone Data Collection & Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.1.0",
    "nbformat>=4.2.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "plotly-express>=0.4.1",
    "pycparser>=2.23",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
